fix: button on hover not showing tooltip, changed contrast

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -32,6 +32,6 @@
   }
 
   .sidebar-tooltip {
-    @apply bg-gray-700 scale-0 inline-block absolute w-auto p-3 m-3 min-w-max left-12 rounded shadow-xl text-white font-mono transition-none origin-left
+    @apply bg-slate-50 z-[1000] scale-0 inline-block absolute w-auto p-3 m-3 min-w-max left-12 rounded shadow-xl text-gray-700 font-mono font-bold transition-none origin-left
   }
 }
